<resources>
    <string name="app_name">MaterialDesignExample</string>

    <string name="contenido_lista_1">Entrada 1</string>
    <string name="contenido_lista_2">Entrada 2</string>
    <string name="contenido_lista_3">Entrada 3</string>
    <string name="contenido_lista_4">Entrada 4</string>
    <string name="contenido_lista_5">Entrada 5</string>

    <string name="add_to_list_button">Agregar elemento</string>

    <string name="infinte_list_entry_message">Mensaje %1$d</string>


    <string name="second_activity_launcher_button">Lista infinita</string>

    <string name="menu_about">Acerca de</string>
    <string name="menu_close_app">Cerrar</string>
    <string name="menu_settings" >Ajustes</string>

    <string name="about">Ejemplo de Material Design y Vistas en Android.</string>
    <string name="ok">Ok</string>

    <string name="shared_button_transitionName" translatable="false">botonCompartido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="color_detail_description">Descripcion del color</string>

    <string name="red_color_component">Rojo; %1$f f - %2$d</string>
    <string name="theme_preference_key" translatable="false">
        mx.unam.fciencias.materialdesign.THEME_PREFERENCE_KEY
    </string>
    <string name="enable_transitions_preference_key" translatable="false">
        mx.unam.fciencias.materialdesign.ENABLE_TRANSITIONS_PREFERENCE_KEY
    </string>
    <string name="light_theme_preference_id">
        mx.unam.fciencias.materialdesign.LIGHT_THEME
    </string>
    <string name="dark_theme_preference_id">
        mx.unam.fciencias.materialdesign.DARK_THEME
    </string>
    <string name="green_color_component">Verde %1$f f - %2$d</string>
    <string name="blue_color_component">Azul: %1$f f - %2$d</string>
    <string name="preferences_general_section_title">General</string>
    <string name="theme_preference_option_title">App theme</string>
    <string name="theme_preference_selector_title">Select theme</string>
    <string name="theme_preference_option_summary">Choose the app color theme</string>
    <string name="transitions_preference_option_title">Enable transitions</string>
    <string name="transitions_preference_option_summary">Enable or disable UI transitions</string>
    <string name="transition_preference_option_title">Animaciones de transición</string>
    <string name="theme_preference_options_title">Tema de la aplicación</string>


</resources>